buttons overlaps fix

--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,7 @@ rt {
     position: fixed;
     font-size: 1em;
     top: 0;
-    right: 7vw;
+    right: 3em;
     margin-left: 7.5em;
     margin-top: 0.5em;
     display: block;
